fix(backend): improve CORS config for Railway and add diagnostic logging
- Add If-None-Match, If-Modified-Since, Pragma to allowed headers
- Normalize origins (trim trailing slashes) for flexible config
- Log configured CORS origins at startup for debugging
- Add APP_CORS_ORIGINS to .env.example with Railway instructions
- Update README troubleshooting for CORS env var and redeploy